--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
   <meta
   name="description"
-  content=" $Buzz is a confident, loyal, and accomplished Space Ranger whose pride in his work shines bright."
+  content=" Alright, meme enthusiasts, ever wondered what happens when you take two legendary internet icons, throw them in a blender with a dash of blue magic."
 />
 <meta
   name="keywords"
-  content=" $Buzz is a confident, loyal, and accomplished Space Ranger whose pride in his work shines bright."
+  content=" Alright, meme enthusiasts, ever wondered what happens when you take two legendary internet icons, throw them in a blender with a dash of blue magic."
 />
 <meta property="og:image" content="logo.png" />
 
